cert-manager/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kpage-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: "nginx"
    acme.cert-manager.io/http01-edit-in-place: "true" 
spec:
  ingressClassName: nginx
  tls:
    - hosts:
       - killian.amnay.fr
      secretName: kpageamnayfr-tls
  rules:
  - host: killian.amnay.fr 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kpage-service
            port:
              number: 80
